# os_labs

./: CMakeLists.txt  README.md
lab2/: CMakeLists.txt  main.cpp
lab2/include/: parent.hpp  utils.hpp
lab2/src/: child.cpp  parent.cpp  utils.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: average.hpp  utils.hpp
lab3/src/: average.cpp  utils.cpp
tests/: CMakeLists.txt  lab2_test.cpp  lab3_test.cpp
